--- a/Data/Configs/common_data.ini
+++ b/Data/Configs/common_data.ini
@@ -1,73 +1,8 @@
 #  this is config file, only store browser type and server URL
 
-# --------------------各个节点账号密码---------------------- #
-[code_01]
-username = cadaly
-password = 1qaz2wsx
-[code_02]
-username = CADALY7
-password = 1qaz2wsx
-[code_03]
-username = CADALY13
-password = 1qaz2wsx
-[code_04]
-username = CADALY19
-password = 1qaz2wsx
-[code_05]
-username = CADALY15
-password = 1qaz2wsx
-[code_06]
-username = CADALY9
-password = 1qaz2wsx
-[code_07]
-username = CADALY17
-password = 1qaz2wsx
-[code_08]
-username = CADALY18
-password = 1qaz2wsx
-[code_09]
-username = bbbb32
-password = 1qaz2wsx
-[code_10]
-username = test010
-password = 1qaz2wsx
-[code_11]
-username = new165
-password = 1qaz2wsx
-[code_12]
-username = 14700000003
-password = 1qaz2wsx
-[userinfo]
-username = new165
-password = 1qaz2wsx
-# --------------------各个节点账号密码---------------------- #
-
-[taobaoinfo]
-username = ceshi165
-password = ceshi165
-
-[registerinfo]
-Mobile = 14785859696
-username = py001
-password = 1qaz2wsx
-
-[order_info]
-receiverName = 收件人1
-receiverPhone = 0734-8796596
-receiverMobile = 15802583845
-province = 湖南省
-city =  长沙市
-district = 天心区
-receiverAddress =测试地址测试街道6666
-sellerMessage = 测试备注信息001
-goodsNo =   001
-goodsName = 测试商品
-goodsProps = 测试属性
-quantity = 2
-price = 05
-
-[SF_pay_type]
-pay_type = '寄付月结','到付现结','寄付现结','第三方月结'
+[zhihu]
+username = 18664594496
+password = wwwhubiao165++
 
 
 
