慕课网登陆（未作验证码处理）

--- a/Data/Configs/common_data.ini
+++ b/Data/Configs/common_data.ini
@@ -1,8 +1,8 @@
 #  this is config file, only store browser type and server URL
 
-[zhihu]
+[muke]
 username = 18664594496
-password = wwwhubiao165++
+password = 1qaz2wsx3edc
 
 
 
