--- a/Data/Configs/driver.ini
+++ b/Data/Configs/driver.ini
@@ -1,5 +1,5 @@
 #  this is config file, only store browser type and server URL
 [browserType]
-#browserName = Firefox
-browserName = Chrome
+browserName = Firefox
+#browserName = Chrome
 #browserName = IE
